# portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  astro.config.mjs  bun.lockb  docker-compose.yml  main.py  mdsvex.config.js  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
posts/: 0.md
posts/[markdown]/: 0.md
posts/markdown/: 0.md
posts/nested/: 1.md
src/: app.d.ts  app.html  app.py  shims.d.ts  socials.json  user.yml
src/components/: BadgeMarquee.astro  BentoGrid.astro  Collapsable.astro  Counter.svelte  HandlePill.astro  HeroHeader.astro  InfoIcon.astro  PopoverTooltip.astro  SocialButtons.astro  SocialIcon.astro  UnderConstruction.astro  VersionTag.astro  WebringSelector.astro
src/core/: logging.py  settings.py  templates.py
src/layouts/: HeroLayout.astro  MainLayout.astro  SectionLayout.astro
src/lib/: remarkToc.js  remarkToc.ts  shims.d.ts  types.d.ts  user.yml  variables.scss
src/lib/components/: BadgeMarquee.svelte  BentoButton.svelte  BentoItem.svelte  GetMyBadge.svelte  HeroHeader.svelte  HeroSocials.svelte  Icon.svelte  IconLoader.svelte  InfoIcon.svelte  (+5 more)
src/pages/: index.astro
src/params/: postslug.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  home.py
src/static/: ThreeJSApp.js  ThreeJSApp.ts  keylogger.js  main.js  main.ts  package.json  perlinterrain.js  pnpm-lock.yaml  style.css  tsconfig.json  vite.config.js
src/styles/: mixins.scss
src/templates/: BaseLayout.jinja  Home.jinja  base.html  home.html
(+48 files in other folders)
